Settled for adding activity to server/databases

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -472,7 +472,7 @@ itemSchedules.forEach(function (item) { %>
       aria-atomic="true"
       id="alertToast"
     >
-      <div class="d-flex">
+      <div class="d-flex justify-content-between">
         <div class="toast-body p-3">
           <code class="text-white"><%= toastMsg %></code>
         </div>
