--- a/views/case-report-view.ejs
+++ b/views/case-report-view.ejs
@@ -266,7 +266,7 @@
       aria-atomic="true"
       id="alertToast"
     >
-      <div class="d-flex">
+      <div class="d-flex justify-content-between">
         <div class="toast-body p-3">
           <code class="text-white"><%= toastMsg %></code>
         </div>
