--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,10 +1,10 @@
 <%- include("partials/header") %> <%- include("partials/navbar") %>
 
 <div class="content">
-  <div class="row g-4">
+  <div class="row g-3">
     <!-- profile card -->
-    <div class="col-12 col-xl-7">
-      <div class="pb-9">
+    <div class="col-12 col-xl-5">
+      <div class="pb-5">
         <div class="card mb-1">
           <div
             class="card-header hover-actions-trigger d-flex justify-content-center align-items-end position-relative mb-7 mb-xxl-0"
@@ -16,27 +16,9 @@
                 background-image: url(../../assets/img/generic/cover-photo.png);
               "
             ></div>
-            <input class="d-none" id="upload-cover-image" type="file" />
-            <label
-              class="cover-image-file-input"
-              for="upload-cover-image"
-            ></label>
-            <div class="hover-actions end-0 bottom-0 pe-1 pb-2 text-white">
-              <span class="fa-solid fa-camera me-2 overlay-icon"></span>
-            </div>
             <!--/.bg-holder-->
 
-            <input class="d-none" id="upload-porfile-picture" type="file" />
-            <div
-              class="hoverbox feed-profile"
-              style="width: 150px; height: 150px"
-            >
-              <div
-                class="hoverbox-content bg-black rounded-circle d-flex flex-center z-index-1"
-                style="--phoenix-bg-opacity: 0.56"
-              >
-                <span class="fa-solid fa-camera fs-7 text-300 light"></span>
-              </div>
+            <div class="feed-profile" style="width: 150px; height: 150px">
               <div
                 class="position-relative bg-400 rounded-circle cursor-pointer d-flex flex-center mb-xxl-7"
               >
@@ -55,27 +37,32 @@
             </div>
           </div>
           <div class="card-body">
-            <div class="row justify-content-xl-between">
+            <div class="row justify-content-between">
               <div class="col-auto">
-                <div class="d-flex flex-wrap mb-3 align-items-center">
-                  <h3 class="me-2"><%= currentFullName %></h3>
+                <h3><%= currentFullName %></h3>
+              </div>
+              <div class="col-auto">
+                <div class="d-flex mb-3 justify-content-between">
                   <span
-                    class="fw-semi-bold fs--1 text-1100 badge badge-phoenix badge-phoenix-primary"
-                    >PB<%= currentUser %></span
+                    class="fw-semi-bold fs--1 text-1100 badge badge-phoenix badge-phoenix-primary ms-auto"
                   >
+                    PB<%= currentUser %>
+                  </span>
                 </div>
               </div>
               <div class="mb-4">
                 <h5 class="mb-2"><%= email || 'Email not added' %></h5>
                 <h5><%= phone || 'Phone not added' %></h5>
               </div>
-              <div class="col-auto">
+              <div class="col-auto mx-auto">
                 <div class="row g-2">
                   <div class="col-auto order-xxl-1">
-                    <button class="btn btn-primary lh-1">
+                    <a
+                      class="btn btn-phoenix-primary lh-1 bg-transparent border border-0"
+                    >
                       <span class="fa-solid fa-plus me-2"></span>Total Report
                       (<%= amountTotalReports %>)
-                    </button>
+                    </a>
                   </div>
                   <div class="col-auto order-xxl-2">
                     <button class="btn btn-phoenix-primary lh-1">
@@ -97,38 +84,93 @@
       </div>
     </div>
 
-    <div class="col-12 col-xl-5">
+    <div class="col-12 col-xl-7">
       <div class="row gx-xl-8 gx-xxl-11">
         <h3 class="mb-4 text-center">Activity Timeline</h3>
+        <!-- Assuming this is your EJS template file (e.g., profile.ejs) -->
         <div
           class="col-xl-12 overflow-auto scrollbar-overlay"
-          style="height: 90vh"
+          style="height: 75vh"
         >
+          <% if (Array.isArray(activity) && activity.length > 0) { %> <%
+          activity.forEach((activity, activityIndex) => { %> <% if (todayDate
+          === activity.date) { %>
+          <h4 class="py-3 border-y border-300 mb-5 ms-8">Today</h4>
+          <% } else { %>
+          <h4 class="py-3 border-y border-300 mb-5 ms-8">
+            <%= activity.date %>
+          </h4>
 
-        <% if (Array.isArray(activity) && activity.length > 0) { %> <%
-        activity.forEach(activity => { %>
-        <h2>Date: <%= activity.date %></h2>
-
-        <% if (Array.isArray(activity.items) && activity.items.length > 0) { %>
-        <ul>
-              <% activity.items.forEach(itemArray => { %>
-                <% if(itemArray.username === currentUser) {%>
-                  <h4><%= itemArray.type %></h4>
-                <% } %>
-              <% }); %>
-        </ul>
-        <% } else { %>
-        <p>No items for this activity.</p>
-        <% } %> <% }); %> <% } else { %>
-        <p>No activities found for <%= currentUser %>.</p>
-        <% } %>
-
+          <% } %> <% const lastItemIndex = activity.items.length - 1; %> <%
+          const filteredItems = Array.isArray(activity.items) ?
+          activity.items.filter(itemArray => itemArray.username === currentUser)
+          : [] %> <% if (filteredItems.length > 0) { %>
+          <div class="timeline-basic mb-9">
+            <% filteredItems.forEach((itemArray, itemIndex) => { %>
+            <div class="timeline-item">
+              <div class="row g-3">
+                <div class="col-auto">
+                  <div class="timeline-item-bar position-relative">
+                    <div class="icon-item icon-item-md rounded-7 border">
+                      <% if(itemArray.type === 'Patrol Report') {%>
+                      <span
+                        class="fa-solid fa-clipboard text-success fs--1"
+                      ></span>
+                      <% } else %> <% if(itemArray.type === 'Case Report') {%>
+                      <span
+                        class="fa-solid fa-suitcase text-danger fs--1"
+                      ></span>
+                      <%} else%> <% if(itemArray.type === 'Schedule') {%>
+                      <span class="fa-solid fa-calendar text-info fs--1"></span>
+                      <%}else %> <% if(itemArray.type === 'Upload Files') {%>
+                      <span
+                        class="fa-solid fa-file-arrow-up text-primary fs--1"
+                      ></span>
+                      <%} %>
+                    </div>
+                    <% if ( lastItemIndex >= 0 &&
+                    activity.items[lastItemIndex].username === currentUser )
+                    { %> <% if (itemIndex === lastItemIndex-1) { %>
+                    <span class=""></span>
+                    <% } else { %>
+                    <span
+                      class="timeline-bar border-end border-dashed border-300"
+                    ></span>
+                    <% } %> <% } %>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="d-flex justify-content-between">
+                    <div class="d-flex mb-2">
+                      <h6 class="lh-sm mb-0 me-2 text-800 timeline-item-title">
+                        <%= itemArray.title %>
+                      </h6>
+                    </div>
+                    <p class="text-500 fs--1 mb-0 text-nowrap timeline-time">
+                      <span class="fa-regular fa-clock me-1"></span><%=
+                      itemArray.time %>
+                    </p>
+                  </div>
+                  <h6 class="fs--2 fw-normal mb-3">
+                    by <a class="fw-semi-bold" href="#!"><%= itemArray.by %></a>
+                  </h6>
+                  <p class="fs--1 text-800 w-sm-60 mb-5">
+                    <%= itemArray.about %>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <% }); %>
+          </div>
+          <% } else { %>
+          <p>No items for this activity.</p>
+          <% } %> <% }); %> <% } else { %>
+          <p>No activities found for <%= currentUser %>.</p>
+          <% } %>
         </div>
       </div>
     </div>
-
   </div>
-
 </div>
 
 <%-include("partials/navbar-script.ejs") %> <%-include("partials/footer") %>
