Done at part sign in, however need to work on sign in err user does not redirect

--- a/views/case-report-submit.ejs
+++ b/views/case-report-submit.ejs
@@ -194,7 +194,7 @@
 
                   <div class="col-12 gy-4">
                     <label class="form-label" for="floatingProjectDescription2"
-                      >Summary Report</label
+                      >Overall Report</label
                     >
                     <textarea
                       class="form-control <%= validationReportSummary %> scrollbar-overlay mb-3"
