--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -21,41 +21,38 @@
           <p class="text-700">Get access to your account</p>
         </div>
 
-        <form
-          action="/sign-in"
-          method="post"
-          class="needs-validation"
-          novalidate="novalidate"
-        >
+        <form action="/sign-in" method="post" class="has-validation">
           <div class="mb-3 text-start">
             <label class="form-label" for="email">Username</label>
             <div class="input-group">
               <span class="input-group-text" id="basic-addon1">PB</span>
               <input
-                class="form-control"
+                class="form-control <%= validationUsername %>"
                 id="username"
                 name="username"
                 type="text"
+                value="<%= username %>"
                 placeholder="Username"
-                required=""
               />
               <div class="valid-feedback">Looks good!</div>
-              <div class="invalid-feedback">This is required</div>
+              <div class="invalid-feedback">Username required not found</div>
             </div>
           </div>
           <div class="mb-3 text-start">
             <label class="form-label" for="password">Password</label>
             <div class="form-icon-container">
               <input
-                class="form-control form-icon-input"
+                class="form-control <%= validationPassword %> form-icon-input"
                 id="password"
                 type="password"
                 name="password"
+                value="<%= password %>"
                 placeholder="Password"
-                required=""
               /><span class="fas fa-key text-900 fs--1 form-icon"></span>
               <div class="valid-feedback">Looks good!</div>
-              <div class="invalid-feedback">This is required</div>
+              <div class="invalid-feedback">
+                Required, at least 1 digit with minimum 4 character
+              </div>
             </div>
           </div>
           <div class="row flex-between-center mb-7">
@@ -65,7 +62,7 @@
                   class="form-check-input"
                   id="basic-checkbox"
                   type="checkbox"
-                  checked="checked"
+                  name="rememberMe"
                 />
                 <label class="form-check-label mb-0" for="basic-checkbox"
                   >Remember me</label
@@ -93,6 +90,35 @@
         </div>
       </div>
     </div>
+
+    <!-- alert toast -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+      <div class="d-flex">
+        <div
+          class="toast <%= toastShow %> align-items-center text-white bg-primary border-0 light"
+          role="alert"
+          data-bs-autohide="false"
+          aria-live="assertive"
+          aria-atomic="true"
+          id="alertToast"
+        >
+          <div class="d-flex justify-content-between">
+            <div class="toast-body px-0 py-3">
+              <code class="text-white"><%= toastMsg %></code>
+            </div>
+
+            <button
+              class="btn ms-2 p-0 btn-close-white"
+              type="button"
+              data-bs-dismiss="toast"
+              aria-label="Close"
+            >
+              <span class="uil uil-times fs-1"></span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <script>
     var navbarTopStyle = window.config.config.phoenixNavbarTopStyle;
@@ -107,6 +133,36 @@
       navbarVertical.classList.add('navbar-darker');
     }
   </script>
+  <div
+    class="btn btn-phoenix-primary position-absolute bottom-0 end-0 m-4 shadow-lg rounded-5 d-flex px-2 py-1"
+  >
+    <p class="my-auto mx-2">Theme</p>
+    <div class="theme-control-toggle fa-icon-wait px-2">
+      <input
+        class="form-check-input ms-0 theme-control-toggle-input"
+        type="checkbox"
+        data-theme-control="phoenixTheme"
+        value="dark"
+        id="themeControlToggle"
+      />
+      <label
+        class="mb-0 theme-control-toggle-label theme-control-toggle-light"
+        for="themeControlToggle"
+        data-bs-toggle="tooltip"
+        data-bs-placement="left"
+        title="Switch theme"
+        ><span class="icon" data-feather="moon"></span
+      ></label>
+      <label
+        class="mb-0 theme-control-toggle-label theme-control-toggle-dark"
+        for="themeControlToggle"
+        data-bs-toggle="tooltip"
+        data-bs-placement="left"
+        title="Switch theme"
+        ><span class="icon" data-feather="sun"></span
+      ></label>
+    </div>
+  </div>
 </main>
 <!-- ===============================================-->
 <!--    End of Main Content-->
