--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -165,6 +165,10 @@
       </div>
     </li>
 
+    <% if(currentProfile === ''){
+      currentProfile = 'assets/img/team/avatar.webp';
+    } %>
+
     <!-- User -->
     <li class="nav-item dropdown">
       <a
@@ -179,9 +183,8 @@
       >
         <div class="avatar avatar-l">
           <img
-            class="rounded-circle"
-            src="../assets/img/team/40x40/57.webp"
-            alt=""
+            class="rounded-circle bg-white border border-primary"
+            src="<%= currentProfile %>"
           />
         </div>
       </a>
@@ -194,9 +197,8 @@
             <div class="text-center pt-4 pb-3">
               <div class="avatar avatar-xl">
                 <img
-                  class="rounded-circle"
-                  src="../assets/img/team/72x72/57.webp"
-                  alt=""
+                  class="rounded-circle shadow-sm"
+                  src="<%= currentProfile %>"
                 />
               </div>
               <h5 class="mt-2 text-black"><%= currentFullName %></h5>
