Acknowledgement duty start

--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -23,14 +23,27 @@
               Enter your email below and we will send
               <br class="d-sm-none" />you a reset link
             </p>
-            <form class="d-flex align-items-center mb-5">
-              <input
-                class="form-control flex-1"
-                id="email"
-                type="email"
-                placeholder="Email"
-              />
-              <button class="btn btn-primary ms-2">
+            <form
+              class="has-validation"
+              action="/forgot-password"
+              method="post"
+            >
+              <div class="form-icon-container row mb-2">
+                <input
+                  class="form-control <%= validationEmail %> flex-1 col-auto"
+                  id="email"
+                  type="text"
+                  name="email"
+                  value="<%= email %>"
+                  placeholder="Email"
+                />
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">
+                  Invalid email address. Please enter a valid email.
+                </div>
+              </div>
+
+              <button class="btn btn-primary mb-3">
                 Send<span class="fas fa-chevron-right ms-2"></span>
               </button>
             </form>
@@ -39,7 +52,37 @@
         </div>
       </div>
     </div>
+
+    <!-- alert toast -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+      <div class="d-flex">
+        <div
+          class="toast <%= toastShow %> align-items-center text-white bg-primary border-0 light"
+          role="alert"
+          data-bs-autohide="false"
+          aria-live="assertive"
+          aria-atomic="true"
+          id="alertToast"
+        >
+          <div class="d-flex justify-content-between">
+            <div class="toast-body px-0 py-3">
+              <code class="text-white"><%= toastMsg %></code>
+            </div>
+
+            <button
+              class="btn ms-2 p-0 btn-close-white"
+              type="button"
+              data-bs-dismiss="toast"
+              aria-label="Close"
+            >
+              <span class="uil uil-times fs-1"></span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
   <script>
     var navbarTopStyle = window.config.config.phoenixNavbarTopStyle;
     var navbarTop = document.querySelector('.navbar-top');
