--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -19,23 +19,68 @@
         <div class="text-center mb-6">
           <h4 class="text-1000">Reset new password</h4>
           <p class="text-700">Type your new password</p>
-          <form class="mt-5">
-            <input
-              class="form-control mb-2"
-              id="password"
-              type="password"
-              placeholder="Type new password"
-            />
-            <input
-              class="form-control mb-4"
-              id="confirmPassword"
-              type="password"
-              placeholder="Cofirm new password"
-            />
-            <button class="btn btn-primary w-100" type="submit">
-              Set Password
-            </button>
+          <form
+            class="mt-5 row has-validation"
+            action="/reset-password/<%= userId %>"
+            method="post"
+          >
+            <div class="col-12 mb-2">
+              <input
+                class="form-control <%= validationNewPassword %>"
+                id="password"
+                name="newPassword"
+                type="password"
+                value="<%= newPassword %>"
+                placeholder="Type new password"
+              />
+            </div>
+
+            <div class="col-12 mb-4">
+              <input
+                class="form-control <%= validationConfirmPassword %>"
+                id="confirmPassword"
+                type="password"
+                value="<%= confirmPassword %>"
+                name="confirmPassword"
+                placeholder="Cofirm new password"
+              />
+            </div>
+
+            <div class="col-12">
+              <button class="btn btn-primary w-100" type="submit">
+                Set Password
+              </button>
+            </div>
           </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- alert toast -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+      <div class="d-flex">
+        <div
+          class="toast <%= toastShow %> align-items-center text-white bg-primary border-0 light"
+          role="alert"
+          data-bs-autohide="false"
+          aria-live="assertive"
+          aria-atomic="true"
+          id="alertToast"
+        >
+          <div class="d-flex justify-content-between">
+            <div class="toast-body px-0 py-3">
+              <code class="text-white"><%= toastMsg %></code>
+            </div>
+
+            <button
+              class="btn ms-2 p-0 btn-close-white"
+              type="button"
+              data-bs-dismiss="toast"
+              aria-label="Close"
+            >
+              <span class="uil uil-times fs-1"></span>
+            </button>
+          </div>
         </div>
       </div>
     </div>
